# FilePattern

./: .gitignore  .readthedocs.yml  CMakeLists.txt  README.md  ext_test.py  fp_test.py  main.cpp  old_test.py  out.txt  requirements.txt  setup.py  sp_test.py  test.py  test.txt
benchmarks/: benchmark.py  generate_data.py  tests.py
doc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  ExternalFilePattern_8cpp.html  ExternalFilePattern_8hpp.html  ExternalFilePattern_8hpp_source.html  ExternalPattern_8cpp.html  ExternalPattern_8hpp.html  ExternalPattern_8hpp_source.html  FilePattern_8cpp.html  FilePattern_8hpp.html  FilePattern_8hpp_source.html  Pattern_8cpp.html  Pattern_8hpp.html  Pattern_8hpp_source.html  README_8md.html  StringPattern_8cpp.html  StringPattern_8hpp.html  StringPattern_8hpp_source.html  Variables_8hpp.html  Variables_8hpp_source.html  ____init_____8py.html  ____main_____8py.html  __version_8py.html  annotated.html  attr_8h.html  attr_8h_source.html  benchmark_8py.html  bindings_8cpp.html  block_8hpp.html  block_8hpp_source.html  buffer__info_8h.html  buffer__info_8h_source.html  build_2lib_8linux-x86__64-3_87_2pattern_2ExternalFilePattern_8py.html  build_2lib_8linux-x86__64-3_87_2pattern_2FilePattern_8py.html  build_2lib_8linux-x86__64-3_87_2pattern_2StringPattern_8py.html  build_2lib_8linux-x86__64-3_87_2pattern_2____init_____8py.html  build_2lib_8linux-x86__64-3_87_2pattern_2get__data_8py.html  (+1422 more)
docs/: Examples.rst  Reference.rst  conf.py  index.rst  requirements.txt
examples/: external_filepattern.py  filepattern.py  generate_data.py  recursive_filepattern.py  stringpattern.py  tests.py
tests/: external_filepattern.py  filepattern.py  generate_data.py  tests.py
(+220 files in other folders)
